--- a/pickbazar-react/shop/public/locales/en/common.json
+++ b/pickbazar-react/shop/public/locales/en/common.json
@@ -6,6 +6,7 @@
   "nav-menu-offer": "Offers",
   "nav-menu-faq": "FAQ",
   "nav-menu-contact": "Contact",
+  "nav-menu-support": "Support",
   "user-avatar": "user avatar",
   "auth-menu-profile": "Profile",
   "auth-menu-checkout": "Checkout",
